--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Montserrat">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Fraunces">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fraunces">
   
   <title>Frontend Mentor | Product preview card component</title>
 
@@ -17,26 +21,9 @@
 </head>
 <body>
 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Joshua ABULU</a>.
-  </div>
-
-<div class="container">
+<main class="container">
   <div class="image">
-    <img src="/images/image-product-desktop.jpg" alt="Image Preview" class="desktop-image">
+    <img src="/Perfume-Card/images/image-product-desktop.jpg" alt="Image Preview" class="desktop-image">
   </div>
   <div class="description">
     <span class="perfume">PERFUME</span>
@@ -44,11 +31,11 @@
     <p class="desc">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
     <p class="price"> <span class="new-price"> $149.99 </span> <span class="old-price">$169.99</span></p>
     <button class="btn">
-      <img class="cart" src="/images/icon-cart.svg" alt="Cart icon">
+      <img class="cart" src="/Perfume-Card/images/icon-cart.svg" alt="Cart icon">
       Add to Cart
     </button>
   </div>
-</div>
+</main>
 
 </body>
 </html>
